[package]
name = "github_branch_table"
version = "0.1.0"
authors = ["Zero <https://github.com/ZeroErrors>"]
edition = "2018"

[dependencies]
dotenv = "0.14.1"
clap = "2.33.0"
reqwest = "0.9.21"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
chrono = "0.4.9"
prettytable-rs = "0.8.0"
