[package]
name = "github_branch_table"
version = "0.1.0"
authors = ["Zero <https://github.com/ZeroErrors>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
clap = "2.33.0"
reqwest = "0.9.22"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.102"
chrono = "0.4.10"
prettytable-rs = "0.8.0"
